# Atlantis

./: .gitignore  Makefile  pyproject.toml
benchmarks/: benchmark.py  dataset.py  registry.py
benchmarks/models/: transformer_module.py
benchmarks/models/local/: check_revnet.py  reformer.py  resnet.py  rev_vit.py
benchmarks/models/torchvision/: __init__.py
benchmarks/performance/: bart.py  bert.py  convnext.py  efficientnet.py  gpt.py  llama.py  resnet.py  rmse.txt  submodule.py  unet.py  vit.py
legacy/benchmarks/models/: __init__.py  bert_module.py  classifier_module.py
legacy/benchmarks/models/local/: __init__.py  rev_swin.py  revnet.py
legacy/benchmarks/models/subgraph/: submodel.py
legacy/benchmarks/models/timm/: __init__.py
legacy/benchmarks/models/transformers/: __init__.py
legacy/benchmarks/performance/: beit.py  bertweet.py  convbert.py  deit.py  rmse.py  swin.py  t5.py  yoso.py
legacy/models/: onnx_workloads.py  submodule.ipynb  torch_workloads.py
legacy/models/baselines/pytorch/: dcgan.py  gpt2.py  nasrnn.py  squeezenet.py  vit.py  (+2 more)
models/: utils.py
models/baselines/pytorch/: bert.py  mobilenetv2.py  nasnet_a.py  resnet50.py  shufflenetV2.py
models/baselines/taso-tvm/: run_baselines.py
models/baselines/tf2/: bert.py  bert_full.py  mobilenetV2.py  nasrnn.py  resnext50.py  shared_functions.py
records/: e2e_perf.csv
report/: alg_e2e.py  e2e_perf_logger.py  pytorch_e2e.py  tvm_e2e.py  utils.py
tools/python-env/: enter-dev-env.fish
tools/version-control/: pyproject.toml.py310  pyproject.toml.py310.torch222  pyproject.toml.py38
(+7 files in other folders)
