[tool.poetry]
name = "atlantis"
version = "0.2.0"
description = "All-in-one Toolkit for Computing Systems Benchmarks/Experiments/Managements"
authors = ["Albert.Shi <heng.shi@sjtu.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
torch = "2.0.0"
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
torchaudio = "2.0.1"
torchtext = "0.15.1"
transformers = "^4.39.3"
memory-profiler = "^0.61.0"
tensorboard = "^2.16.2"
timm = "^0.9.16"
lightning = "^2.2.1"
portalocker = "^2.8.2"
bottleneck = "^1.3.8"
memcnn = "^1.5.2"
revlib = "^1.7.2"
wandb = "^0.17.0"
numpy = "1.23.4"
deepspeed = "^0.14.2"
torch-pruning = "^1.3.7"
matplotlib = "^3.8.4"
accelerate = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
